Adding a utility constructor in URL