@@ -1,7 +1,7 @@
 package com.amanda.blog.utils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -9,12 +9,12 @@ import java.util.TimeZone;
 
 public class URL {
 
+    private URL() {
+        throw new IllegalStateException("Utility class");
+    }
+
     public static String decodeParam(String text) {
-        try {
-            return URLDecoder.decode(text, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return " ";
-        }
+        return URLDecoder.decode(text, StandardCharsets.UTF_8);
     }
 
     public static Date convertDate(String textDate, Date defaultValue) {
@@ -22,9 +22,9 @@ public class URL {
         sdf.setTimeZone(TimeZone.getTimeZone("GMT"));
         try {
             return sdf.parse(textDate);
-
         } catch (ParseException e) {
             return defaultValue;
         }
     }
+
 }
